# Heimdall

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  start.md  tsconfig.base.json
.github/workflows/: ci.yml
.moon/: toolchain.yml  workspace.yml
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: dashboard.tsx  header.tsx  price-chart.tsx
apps/web/components/ui/: card.tsx  stat.tsx
apps/web/lib/: api.ts  mock-data.ts
docs/: ARCHITECTURE.md  DATA_SOURCES.md  ROADMAP.md  ai-strategy.md
docs/adr/: 0001-record-architecture-decisions.md  0002-tech-stack.md  0003-monorepo-and-tooling.md  0004-storage-postgres-timescale.md  0005-contracts-first.md  0006-ai-integration-strategy.md
infra/: README.md  docker-compose.yml
infra/otel/: collector.yaml
infra/postgres/init/: 01-init.sql
ml/: README.md
pipelines/: README.md  pyproject.toml
pipelines/heimdall_pipelines/: __init__.py  definitions.py  resources.py
pipelines/heimdall_pipelines/assets/: __init__.py  market_data.py
services/api/: README.md  pyproject.toml
services/api/heimdall_api/: __init__.py  config.py  db.py  main.py  telemetry.py
services/api/heimdall_api/routers/: health.py  instruments.py  ohlcv.py
