[project]
name = "heimdall"
version = "0.1.0"
description = "Heimdall — BIST tahmin/sinyal/araştırma platformu (uv workspace kökü)"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["services/api", "pipelines", "packages/contracts-py"]

[tool.uv.sources]
heimdall-contracts = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Türkçe bir kod tabanıyız: ambiguous-unicode (İ/ı/ş/ç...) kuralları kapalı.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI deyimleri varsayılan argümanda çağrı yapar — bu B008 değildir.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["services", "pipelines", "packages"]
