[project]
name = "heimdall-pipelines"
version = "0.1.0"
description = "Heimdall veri/ML pipeline'ları (Dagster)"
requires-python = ">=3.12"
dependencies = [
    "heimdall-contracts",
    "dagster>=1.7",
    "dagster-webserver>=1.7",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["heimdall_pipelines"]

[tool.dagster]
module_name = "heimdall_pipelines.definitions"
code_location_name = "heimdall"
