[project]
name = "heimdall-api"
version = "0.1.0"
description = "Heimdall API — veri/tahmin servis katmanı (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "heimdall-contracts",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "structlog>=24.1",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["heimdall_api"]
